if(PERF_NUM)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -D PERF_NUM")
message (STATUS "target will be built for performance tabulation")
else()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
add_executable (${PROJECT_NAME} main.cpp StereoMatchingBasic.cpp StereoMatchingCPU.cpp)
target_link_libraries(${PROJECT_NAME} OpenCL sycl)
file(COPY ../res/imL.png DESTINATION .)
file(COPY ../res/imR.png DESTINATION .)
if(WIN32)
add_custom_target (run ${PROJECT_NAME}.exe imL.png imR.png disparity.png)
else()
add_custom_target (run ./${PROJECT_NAME} imL.png imR.png disparity.png)
endif()
